--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -2510,7 +2510,7 @@ year = {2008}
 }
 
 @article{Rashba1959SymmetryAr,
-    title = {{Symmetry of Energy Bands in Crystals of Wurtzite Type II . Symmetry of Bands with Spin-Orbit Interaction Included The Harvard community has made this article openly available . Please share how this access benefits you . Your story matters . Accessed ( Ar}},
+    title = {{Symmetry of Energy Bands in Crystals of Wurtzite Type II . Symmetry of Bands with Spin-Orbit Interaction}},
     year = {1959},
     journal = {Fiz. Tverd. Tela: Collected Papers},
     author = {Rashba, Emmanuel and Sheka, V.},
