--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -1985,7 +1985,7 @@ year = {2008}
     arxivId = {1601.03643}
 }
 
-@article{Petersen2000SimpleStates,
+@article{Petersen2000,
     title = {{Simple tight-binding model of spin-orbit splitting of sp-derived surface states}},
     year = {2000},
     journal = {Surface Science},
@@ -2833,7 +2833,7 @@ year = {2008}
     arxivId = {1411.3249}
 }
 
-@article{Go2016SurfacePhysics,
+@article{Go2016,
     title = {{Surface orbitronics: new twists from orbital Rashba physics}},
     year = {2016},
     author = {Go, Dongwook and Hanke, Jan-Philipp and Buhl, Patrick M. and Freimuth, Frank and Bihlmayer, Gustav and Lee, Hyun-Woo and Mokrousov, Yuriy and Bl{\"{u}}gel, Stefan},
