--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -3,15 +3,15 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath,xcolor}
 \usepackage[backend=biber,refsection=chapter]{biblatex}
-\usepackage{cancel}
+% \usepackage{cancel}
 \usepackage{siunitx}
 \usepackage{graphicx}
 % \usepackage{smartdiagram}
 \usepackage{subcaption}
 % \usepackage[caption=false]{subfig}
 \captionsetup[subfigure]{labelformat=brace}
-\usepackage[normalem]{ulem}
-\usepackage{tikz}
+% \usepackage[normalem]{ulem}
+% \usepackage{tikz}
 \usepackage{bm}
 % \usepackage{natbib}
 \usepackage{hyperref}
@@ -46,7 +46,7 @@
 \newcommand\IncludeGraphics[2][width=\linewidth]{%
     \includegraphics[#1]{\GraphicsPath #2}}   
 
-\usetikzlibrary{shapes,arrows,decorations.pathmorphing}
+% \usetikzlibrary{shapes,arrows,decorations.pathmorphing}
 
 \title{
 	{Interplay between complex orders in functional materials}\\
@@ -69,6 +69,6 @@
 \Include{Cr}
 \Include{GdMn2O5}
 \Include{Softening}
-% \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
+\chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
