--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -83,72 +83,108 @@ For this to be true, however, it is important that the orbitals $u_n$, and $u_m$
 
 \section{Orbital Rashba Effect}
 Unlike the purely relativistic Rashba-Bychkov effect, the orbital effect combines strong atomic SOC with the generation of nonzero orbital angular momentum (OAM) through electrostatic means.
-This contribution, therefore, is not limited by the small prefactors of Eq.~\ref{eq:kp_expansion}. As will be explicitely shown below, Bloch functions with nonzero OAM acquire nonzero electric dipoles between unit cells\cite{Park2011}, which will couple to any uniform electric field (e.g. from electric polarization). This leads to two seperate effects.
+This contribution, therefore, is not limited by the small prefactors of Eq.~\ref{eq:kp_expansion}. As will be explicitely shown below, electric dipole matrix element s can cause Bloch functions to acquire nonzero OAM when any electric field is present (e.g. from electric polarization), and vice versa Bloch functions with nonzero OAM  acquire nonzero electric dipoles between unit cells\cite{Petersen2000,Park2011,Go2016}. This leads to two seperate effects.
 
-Firstly, when atomic SOC is included, OAM is unquenched at the high symmetry k-points. This leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, even without including the contribution of the atomic SOC, it causes a linear variation of the OAM of the Bloch functions as one moves away from the high-symmetry k-point. If one then includes the atomic SOC from Eq.~\ref{eq:Rashba_unk_Vs}, this linear-in-k $l$ will lead to a linear variation of the energy with either positive or negative slope, depending on the spin orientation.
+Firstly, when atomic SOC is included, OAM is unquenched at the high symmetry k-points. This leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, even without including the contribution of the atomic SOC, the OAM of the Bloch functions to appear in a chiral texture as one moves away from the high-symmetry k-point, similarly to how the relativistic Rashba effect leads to a chiral spin texture. If one then includes the atomic SOC from Eq.~\ref{eq:Rashba_unk_Vs}, this linear-in-k $l$ will lead to a linear variation of the energy with either positive or negative slope, depending on the spin orientation.
 
-We now proceed by giving a pedagogical derivation of this mechanism based on a tight-binding model.
+We now proceed by giving a pedagogical derivation of this mechanism based on a tight-binding model \cite{Petersen2000,Go2016}.
 
 \subsection{Tight-Binding model}
-The tight-binding model is defined on a 2D square layer with one atom per unit cell, and four Wannier orbitals on the atom. We will assume these orbitals are close to hydrogenic $s$ and $p$ orbitals. The bare tight-binding Hamiltonian is denoted as $H_0$ and includes the usual hopping parameters due to overlap $t^{\alpha\beta}_{ij} = \int d\mathbf{r} \,w^{\alpha}_i(\mathbf{r})^*(\frac{\mathbf{p}^2}{2m} + V)w^{\beta}_j(\mathbf{r})$. To mimick the inversion symmetry breaking in ferroelectric materials (i.e. with a polar space group), an electric field perpendicular to the layer ($z$ direction) is applied.
-This allows extra hopping terms associated with $H_{isb} = e (\hat{\bm{d}}\cdot \bm{E})$. Assuming the form of the Wannier functions $s(\bm{r},\bm{R}) = e^{\left(\frac{-|\bm{r}-\bm{R}|}{a_0}\right)^2}$, $p_\alpha(\bm{r},\bm{R}) = \alpha e^{\left(\frac{-|\bm{r}-\bm{R}|}{a_0}\right)^2}$ with $\alpha = x,y,z$, we can write down the matrix of the electric dipole moment between the orbitals of the central unit cell and the ones shifted by $\bm{R}=\bm{n}a, \bm{n}=(n_x,n_y)$, using the basis $s, p_x, p_y, p_z$ as follows:
+The tight-binding model is defined on a 2D square layer with one atom per unit cell, and four Wannier orbitals on the atom. We assume that these orbitals are gaussians the form $s(\bm{r}, \bm{n}) = e^{-\frac{|\bm{r}-\bm{n}a|^2}{a_0}}$, $p_\alpha(\bm{r}, \bm{n}) = \alpha e^{-\frac{|\bm{r}-\bm{n}a|^2}{a_0}}$ with $\alpha = x, y, z$, and $\bm{n}$ denoting the unit cell indices $\bm{n} = (n_x, n_y)$.
+The reason for choosing gaussians is to make solving the overlap integrals more easy, it does not lead to any qualitative changes to the derivation below.
+To simplify notation below, we omit $\bm{r}$ and write $\Ket{\alpha^0} = \Ket{\alpha}$.
+The bare tight-binding Hamiltonian is denoted as $\hat{H}_0$ and includes the usual hopping parameters due to overlap $t_{\alpha\beta}^{ij} = \int d\mathbf{r} \,w^{\alpha}_i(\mathbf{r})^*(\frac{\mathbf{p}^2}{2m} + V(\bm{r}))w^{\beta}_j(\mathbf{r})$.
+To mimick the inversion symmetry breaking in ferroelectric materials (i.e. with a polar space group), an electric field perpendicular to the layer ($z$ direction) is applied.
+This allows extra hopping terms associated with $\hat{H}_{isb} = e (\hat{\bm{d}}\cdot \bm{E})$, with $\hat{\bm{d}}$ the electric dipole moment:
 \begin{align}
 	\label{eq:dipole}
-	\hat{d}_z(\bm{n}) =& ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}\left(\begin{matrix}0&0&0&2\\\\0&0&0&n_x\\\\0&0&0&n_y\\\\2&n_x&n_y&0\end{matrix}\right)\\
-	=&\delta_z^n\hat{d}^1_z(\bm{n}),
-	% d_z(\bm{R}) = ae^{-\frac{|\bm{R}|^2}{2}}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}(2,n_x,n_y,0),
+	\Bra{s} \hat{H}_{isb} \Ket{p_z} &= 2 e E_z \theta_z^n\\
+	\Bra{p_z} \hat{H}_{isb} \Ket{p_x(\bm{n})} &= e E_z \theta_z^n n_x\\
+	\Bra{p_z} \hat{H}_{isb} \Ket{p_y(\bm{n})} &= e E_z \theta_z^n n_y
+	% \hat{d}_z(\bm{n}) =& -ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}\left(\begin{matrix}0&0&0&2\\\\0&0&0&n_x\\\\0&0&0&n_y\\\\2&n_x&n_y&0\end{matrix}\right)\\
+	% =&\theta_z^n\hat{d}^1_z(\bm{n}),
 \end{align}
-with $\delta_z^n = ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}$.
-Fig.~\ref{fig:overlapdip} shows pictorially how these dipole terms arise. 
+with $\theta_z^n = -ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}$, other terms of $\hat{H}_{isb}$ are zero.
+Fig.~\ref{fig:overlapdip} shows pictorially how these terms arise from the electric dipoles between the shifted orbitals. 
 \begin{figure}[t]
 ~\centering
 \IncludeGraphics[width=\linewidth]{overlapdip.pdf}\caption{\label{fig:overlapdip} Overlap dipoles. (a) Dipole between $s$ and $p_z$, (b) Dipole between shifted $p$ orbitals, the dashed line signifies a unit cell boundary.}
 \end{figure}
 
+Solving the tight binding model for $k=0$, one can treat $\hat{H}_{isb}$ as a perturbation on $\hat{H}_0$ due to the smallness of $E_z$, leading to a hybridization between the $s$ and $p_z$ orbitals:
+\begin{align}
+	\Ket{\tilde{p}_z} &= \Ket{p_z} + \frac{\Bra{s} 2 e E_z \theta^n_z\Ket{p_z}}{\varepsilon_z - \varepsilon_s}\Ket{s}\\
+	\Ket{\tilde{s}}   &= \Ket{s} + \frac{\Bra{p_z} 2 e E_z \theta^n_z\Ket{s}}{\varepsilon_s - \varepsilon_z}\Ket{p_z},
+\end{align}
+where $\varepsilon_s = \Bra{s} \hat{H}_0 \Ket{s}$ and $\varepsilon_z = \Bra{p_z} \hat{H}_0 \Ket{p_z}$.
+In order to proceed, we only treat the important kinetic energy part of $\hat{H}_0$ and rewrite it in terms of this hybrid $\tilde{p}_z$ orbital in the central unit cell and the shifted $p_x$, $p_y$ orbitals, leading to:
+\begin{align}
+	\Bra{\tilde{p}_z} \hat{H}_0 \Ket{p_x(\bm{n})} &= \frac{2 e E_z \theta_z^n}{\varepsilon_z - \varepsilon_s}\Bra{s} \frac{-\mathbf{\nabla}^2}{2} \Ket{p_x(\bm{n})}\\
+	&= \frac{4 e E_z (\theta_z^n)^2}{\varepsilon_z - \varepsilon_s} n_x (-5 + a^2 |\bm{n}|^2)\\
+	\Bra{\tilde{p}_z} \hat{H}_0 \Ket{p_y(\bm{n})} &= \frac{4 e E_z (\theta_z^n)^2}{\varepsilon_z - \varepsilon_s} n_y (-5 + a^2 |\bm{n}|^2)
+\end{align}
 
-Using the aforementioned Wannier functions to construct Bloch functions, we can write down their dipoles as:
-\begin{align}
-	\hat{d}_z(\bm{k}) &= \sum_{\bm{n}} e^{i \bm{k}\cdot \bm{n}}\hat{d}_z(\bm{n})\\
-	&=\sum_{\bm{n}}i \sin(\bm{k}\cdot\bm{n}) \hat{d}_z(\bm{n}) + k\mathrm{-even\,terms},
-\end{align}
-% \lp{add some discussion on s-p_z hybridization}
-writing $\bm{k}$ in terms of crystalline coordinates ($\frac{2\pi}{a}$), and keeping only the $\sin(\bm{k}\cdot\bm{n})$ part of the exponent since the $\cos(\bm{k}\cdot\bm{n})$ part since it does not result in linear-in-k terms. Solving the tight binding model for $k=0$, hybridization occurs between the $s$ and $p_z$ orbitals due to $H_{isb}$, however, since this hybridization has no terms that vary linearly with $k$, we write in the following $p_z$ as the hybrid $s$-$p_z$ orbital. If we then assume that at $k=0$ the Bloch functions are formed from this orbital and the $p_x$,$p_y$ orbitals: $\Ket{\alpha(\bm{k}=\bm{0})} = \sum_{\bm{n}} \Ket{\alpha(\bm{n})}$, we can write down a perturbation theory for small $\bm{k}$ in the spirit of the usual $\bm{k}\cdot\bm{p}$ theory,
-
-\begin{align}
-	\Ket{\alpha(\bm{k})}&=\Ket{\alpha} + \sum_{\beta \neq \alpha} \frac{\Bra{\beta} H_0(\bm{k}) + H_{isb}(\bm{k}) \Ket{\alpha}}{E_{\alpha} - E_{\beta}} \Ket{\beta}\\
-	&=\Ket{\alpha} + \sum_{\beta \neq \alpha} \frac{\Bra{\beta} H_0(\bm{k}) + e E_z \hat{d}_z(\bm{k}) \Ket{\alpha}}{E_{\alpha} - E_{\beta}} \Ket{\beta}.
-\end{align}
-The effect of $H_{isb}$ is to mix $p_x$ and $p_y$ orbitals with the $p_z$ orbital, e.g. if $\Ket{\alpha} = p_x$ we get that
-\begin{align}
-	\Ket{\alpha(\bm{k})} &= \Ket{p_x} + i \frac{e E_z \sum_{\bm{n}} \sin(k_x n_x)n_x \delta_z^n}{E_{p_x} - E_{p_z}} \Ket{p_z}\\
-	&=\Ket{p_x} + i c(k_x) \Ket{p_z}.
-\end{align}
-With $l_y = -i\hbar(z \partial_x - x \partial_z )$ we get that
+To construct $\hat{H}_0(\bm{k})$ and $\hat{H}_{isb}(\bm{k})$, one can fourier transform the Wannier Functions:
 \begin{equation}
-	\label{eq:oam_from_k}
-	\Bra{\alpha(\bm{k})} l_y \Ket{\alpha(\bm{k})} = c(k_x) = k_x \frac{e E_z \sum_{\bm{n}} n_x^2\delta_z^n}{E_{p_x} - E_{p_z}}
-\end{equation}
-A similar term involving $l_x$, comes from the variation of $k_y$, but with the opposite sign. If the atomic spin-orbit coupling, $\lambda \bm{l}\cdot\bm{\sigma}$, is then taken into account, we get to a contribution to the energy dispersion $\varepsilon(\bm{k}) \propto E_z (k_x \sigma_y - k_y \sigma_x)$ which has the from of Eq.~\ref{eq:Rashba_form}. 
-The inversion symmetry thus leads to a linear variation of the OAM. When the orbitals originate from an atom with non-negligible atomic SOC, this linear variation of the OAM will lead to a contribution to the dispersion that varies linearly with $\bm{k}$, either upwards or downwards depending on the sign of $\sigma$. Except for the atomic spin-orbit coupling, which can be large, this effect is purely based around electrostatic considerations and thus does not have the same minuscule prefactor as the purely relativistic Rashba effect.\lp{discuss}
+	\Ket{\alpha(\bm{k})} = \frac{1}{\sqrt{N}}\sum_{\bm{n}} e^{i \bm{k}\cdot \bm{n}}\Ket{\alpha(\bm{n})}
+\end{equation}i
+with $\alpha$ one of the aforementioned orbitals, $\bm{k}$ written in terms of crystalline coordinates ($\frac{2\pi}{a}$), and $N$ denoting the total amount of unit cells in the material. This results in:
+\begin{align}
+	\hat{H}_0(\bm{k}) + \hat{H}_{isb}(\bm{k}) &= \sum_{\bm{n}} e^{i \bm{k}\cdot \bm{n}}(\hat{H}_0(\bm{n}) + \hat{H}_{isb}(\bm{n}))\\
+	&= \sum_{\bm{n}} i \sin(\bm{k}\cdot \bm{n})(\hat{H}_0(\bm{n}) + \hat{H}_{isb}(\bm{n})) + k\mathrm{-even\,terms},
+\end{align}
+keeping only the $\sin(\bm{k}\cdot\bm{n})$ part of the exponent since the $\cos(\bm{k}\cdot\bm{n})$ part does not result in linear-in-$k$ terms, in the small $\bm{k}$ expansion below we keep only these linear-in-$k$ terms.
 
-This assumes that the states at the high symmetry point ($|k|=0$) have a fully quenched OAM, however, when spin-orbit coupling is included, this is only partially true. Due to the energy contribution from $H_{soc}$ the material can gain by creating orbitals that have $\bm{j} = \bm{l} + \frac{1}{2}\bm{\sigma}$. Similar to the above derivation, we can look at a small-$k$ expansion for orbitals that have nonzero OAM.
+If we then assume that at $k=0$ the Bloch functions are formed from $p_x$,$p_y$, $\tilde{p}_z$ and $\tilde{s}$ orbitals: $\Ket{\alpha(\bm{k}=\bm{0})} = \frac{1}{\sqrt{N}}\sum_{\bm{n}} \Ket{\alpha(\bm{n})}$  a perturbation theory for small deviations $\bm{k}$ away from zero can be written down:
+\begin{equation}
+	\Ket{\alpha(\bm{k})}=\Ket{\alpha} + \sum_{\beta \neq \alpha} \frac{\Bra{\beta} H_0(\bm{k}) + \hat{H}_{isb}(\bm{k}) \Ket{\alpha}}{\varepsilon_{\alpha} - \varepsilon_{\beta}} \Ket{\beta}
+\end{equation}
+
+Gathering the linear-in-$k$ terms, and assuming $\varepsilon_p = \Bra{p_x} \hat{H}_0 \Ket{p_x} = \Bra{p_y} \hat{H}_0 \Ket{p_y}$, we find
+\begin{align}
+	\Ket{\tilde{p}_x(\bm{k})} &= \Ket{p_x(0)} + \Theta \frac{ i e E_z k_x}{\varepsilon_p - \varepsilon_{\tilde{z}}}\Ket{\tilde{p}_z(0)} \\
+	\Ket{\tilde{p}_y(\bm{k})} &= \Ket{p_y(0)} + \Theta \frac{ i e E_z k_y}{\varepsilon_p - \varepsilon_{\tilde{z}}}\Ket{\tilde{p}_z(0)}\\
+	\Ket{\tilde{p}_z(\bm{k})} &= \Ket{\tilde{p}_z(0)} + \Theta \frac{i e E_z}{\varepsilon_p - \varepsilon_{\tilde{z}}} \left(k_x\Ket{p_x(0)} + k_y\Ket{p_y(0)}\right),
+\end{align}
+with $\Theta = \frac{\pi^{5/2}}{256 a^3 }\left(-16\sqrt{2} + \frac{3a\pi^{3/2}}{\varepsilon_z - \varepsilon_s}\right)$.
+Then, using the definition of the OAM operators for $p$-orbitals:
+\begin{equation}
+	\hat{L}_x =\left(\begin{matrix}0&0&0\\\\0&0&-i\\\\0&i&0&\end{matrix}\right), \hat{L}_y =\left(\begin{matrix}0&0&i\\\\0&0&0\\\\-i&0&0&\end{matrix}\right), \hat{L}_z =\left(\begin{matrix}0&-i&0\\\\i&0&0\\\\0&0&0&\end{matrix}\right)
+\end{equation}
+we find that,
+\begin{align}
+	\label{eq:oam_from_k}
+	\Bra{\tilde{p}_z(\bm{k})} \hat{L}_x \Ket{\tilde{p}_z(\bm{k})} &= - 2 \Theta \frac{e E_z k_y}{\varepsilon_p - \varepsilon_{\tilde{z}}}\\ 
+	\Bra{\tilde{p}_z(\bm{k})} \hat{L}_y \Ket{\tilde{p}_z(\bm{k})} &= 2 \Theta \frac{e E_z k_x}{\varepsilon_p - \varepsilon_{\tilde{z}}} 
+\end{align}
+These expressions for $\hat{\bm{L}}$ can be filled into the expression for the atomic SOC $\hat{H}_{soc}= \lambda \hat{\bm{L}} \cdot \hat{\bm{\sigma}}$ to find the energy for $\Ket{\tilde{p}_z}$:
+\begin{equation}
+	\label{eq:Rashba_from_OAM}
+	\varepsilon(\bm{k}) = \frac{2 \lambda \Theta e E_z}{\varepsilon_p - \varepsilon_{\tilde{z}}}(\bm{k} \times \bm{\sigma})
+\end{equation}
+which has the from of Eq.~\ref{eq:Rashba_form}.
+
+From this qualitative derivation, it is clear that the main reason behind the orbital Rashba effect can be traced back to the observation that Bloch functions with nonzero OAM have electric dipoles that couple to the inversion symmetry breaking electric field. We identified two sources that lead to the effect: the first one comes from the direct overlap dipoles between $p_x$ and $p_y$ orbitals, and the $p_z$ orbital\cite{Petersen2000}, the second is due to the hybridization of the $s$ and $p_z$ overlap, and the kinetic energy term between the $s$ and neighboring $p_x$ and $p_y$ orbitals\cite{Go2016}. These two terms are reflected in the two terms that contribute to $\Theta$, and lead to a chiral, linear-in-$k$ texture of the OAM.
+If there then exists strong atomic SOC, this linear-in-$k$ OAM will couple to the spin and result in the final Rashba-like form of Eq.~\ref{eq:Rashba_from_OAM}.
+
+There is one final term that contributes to the linear variation of OAM with $\bm{k}$, which is only present when there is an unquenching of the OAM at the high symmetry point ($|k|=0$) due to the atomic SOC \ref{Park2011}. This is due to the energy gain from $\hat{H}_{soc}$ if the material has orbitals that have $\bm{j} = \bm{l} + \frac{1}{2}\bm{\sigma}$. Similar to the above derivation, we can look at a small-$k$ expansion for orbitals that have nonzero OAM.
 We can write in general that
 \begin{equation}
-	\Bra{\alpha} \hat{l}_{\gamma} \Ket{\beta} = i \epsilon_{\alpha \beta \gamma} c^*_\alpha c_\beta
+	\Bra{\alpha} \hat{L}_{\gamma} \Ket{\beta} = i \epsilon_{\alpha \beta \gamma} c^*_\alpha c_\beta
 \end{equation}
 when $\alpha,\beta,\gamma$ designate $x,y,z$. This means that there has to be at least some admixing of multiple $p$-orbitals to get nonzero OAM. This leads to the following expansion of the Bloch functions around the high-symmetry $|k|=0$ point:
 \begin{align}
-	\Ket{\psi_n(\bm{k})} =& \sum_{\bm{n},\alpha} c_\alpha(\bm{k}) e^{i \bm{k}\cdot\bm{n}}\Ket{\alpha(\bm{n})}\\
+	\Ket{\psi(\bm{k})} =& \sum_{\bm{n},\alpha} c_\alpha(\bm{k}) e^{i \bm{k}\cdot\bm{n}}\Ket{\alpha(\bm{n})}\\
 	=& \sum_{\bm{n},\alpha} \left(c_\alpha(0) + \bm{k}\left.\frac{\partial c_\alpha(\bm{k})}{\partial_k}\right\rvert_{\bm{k}=0} \right)\left(1 + i\bm{k}\cdot\bm{n}\right)\Ket{\alpha(\bm{n})}.
 \end{align}
-Focusing on the terms that vary linearly with $k$, we recognize the contribution coming from the second term in the $c$ expansion together with the first term in the $e$ expansion as the previously discussed contribution. We can, however, also combine the first term in the $c$ expansion with the second in the $e$ expansion. If we single out this contribution to $d_z(\bm{k})$, we get
+Focusing on the terms that vary linearly with $k$, the second term in the $c$ expansion together with the first term in the exponent expansion is exactly the contribution that was discussed before. The final term for the Orbital Rashba effect originates from combining the first term in the $c$ expansion with the second in the exponent expansion, leading to the contribution
 \begin{align}
 	\label{eq:d_z_from_OAM}
-	d_z(\bm{k}) =&  i\sum_{\bm{n},\alpha,\beta} c_\alpha^*(0)c_\beta(0)\bm{k}\cdot\bm{n}\Bra{\alpha(\bm{0})} \hat{d}_z \Ket{\beta(\bm{n})}\\
-	=&i\sum_{\bm{n}} \delta_z^n (c^*_x(0)c_z(0)k_x n_x^2 + c^*_y(0)c_z(0) k_y n_y^2) \\
-	=&\sum_{\bm{n}} \delta_z^n (l_x(0)k_y n_y^2-l_y(0) k_x n_x^2).
+	\varepsilon(\bm{k}) = \Bra{\psi(\bm{k})} \hat{H}_{isb} \Ket{\psi(\bm{k})} =&  i\sum_{\bm{n},\alpha,\beta} c_\alpha^*(0)c_\beta(0)\bm{k}\cdot\bm{n}\Bra{\alpha(0)} \hat{H}_{isb} \Ket{\beta(\bm{n})}\\
+	=&i e E_z \frac{-\pi^{5/2}}{8\sqrt{2}a^3}(c^*_x(0)c_z(0)k_x + c^*_y(0)c_z(0) k_y) \\
+	=&e E_z \frac{\pi^{5/2}}{8\sqrt{2}a^3}(L_y(0)k_x - L_x(0)k_y).
 \end{align}
-These expressions show us that, together with ${H_{soc} = \lambda \bm{l}\cdot\bm{\sigma}}$ and $H_{isb} = e E_z d_z$, an additional Rashba-like term appears in the energy dispersion\lp{maybe a little more explanation is warranted here}.
+These expressions show us that, due to ${\hat{H}_{soc} = \lambda \hat{\bm{L}}\cdot\hat{\bm{\sigma}}}$ and $\hat{H}_{isb} = e E_z d_z$, an additional Rashba-like term appears in the energy dispersion.
 
 With the understanding that one can find Rashba like dispersions, coming not from the usually considered purely relativistic, but also from electrostatic mechanisms. We now look at a concrete example that behaves very similar to the above toy model, GeTe.
 
